# pairs_trading

./: .gitignore  pyproject.toml
src/data/: gen_data.py
src/gen_result/: metrics.py  plot.py  run.py
src/paper_methods/: README.md
src/paper_methods/PairsTradingQFin05/: README.md  em.py  kalman.py  model.py  run.py  signals.py  smoother.py  spread.py
src/paper_methods/ml/: __init__.py
src/paper_methods/ml/Enhancing a Pairs Trading strategy with the application of Machine Learning/: README.md  __init__.py  do.sh  run.py
src/paper_methods/ml/ISEPT/: README.md  TRADING_METHODS.md  __init__.py  do.sh  run.py
src/work/re_corr_former/: README.md  __init__.py  do.sh  run.py
src/work/re_corr_former/common/: __init__.py  config.py  models.py
src/work/re_corr_former/data_loading/: __init__.py  market_data.py
src/work/re_corr_former/evaluation/: __init__.py  metrics.py
src/work/re_corr_former/execution/: __init__.py  outputs.py
src/work/re_corr_former/features/: __init__.py  asset_features.py
src/work/re_corr_former/labels/: __init__.py  recovery_labels.py
src/work/re_corr_former/modal_execution/: __init__.py  app.py  client.py  payloads.py
src/work/re_corr_former/models/: __init__.py  re_corr_former.py
src/work/re_corr_former/pairs/: __init__.py  candidate_reports.py  candidate_visuals.py  candidates.py  spread_features.py
src/work/re_corr_former/selection/: __init__.py  scoring.py
src/work/re_corr_former/sharpe_prediction/: __init__.py  datasets.py  metrics.py  models.py  rolling.py
src/work/re_corr_former/trading/: __init__.py  (+2 more)
(+62 files in other folders)
