[project]
name = "pair-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "modal>=1.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14.6",
    "tensorflow>=2.21.0",
    "yfinance>=1.3.0",
]
